--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -341,23 +341,23 @@ jobs:
       run: (cd packages/flow-dev-tools && yarn install | cat)
     - name: Run tool tests
       run: ./tool test --bin bin/macos/flow | cat
-  tool_test_win:
-    runs-on: windows-latest
-    needs:
-    - build_win
-    steps:
-    - uses: actions/checkout@v3.6.0
-    - name: Install Node LTS
-      run: choco install nodejs-lts -y
-    - name: Enable Corepack
-      run: corepack enable
-    - name: Install tool deps from yarn
-      run: |-
-        cd packages/flow-dev-tools
-        yarn install --ignore-scripts --pure-lockfile
-    - name: Run tool tests
-      run: node packages/flow-dev-tools/bin/tool test --bin bin/win64/flow.exe --parallelism 1
-      shell: bash
+  # tool_test_win:
+  #   runs-on: windows-latest
+  #   needs:
+  #   - build_win
+  #   steps:
+  #   - uses: actions/checkout@v3.6.0
+  #   - name: Install Node LTS
+  #     run: choco install nodejs-lts -y
+  #   - name: Enable Corepack
+  #     run: corepack enable
+  #   - name: Install tool deps from yarn
+  #     run: |-
+  #       cd packages/flow-dev-tools
+  #       yarn install --ignore-scripts --pure-lockfile
+  #   - name: Run tool tests
+  #     run: node packages/flow-dev-tools/bin/tool test --bin bin/win64/flow.exe --parallelism 1
+  #     shell: bash
   ounit_test_linux:
     runs-on: ubuntu-latest
     container:
@@ -518,39 +518,39 @@ jobs:
           dist/npm-flow-parser-bin.tgz
           dist/npm-flow-node.tgz
           dist/npm-flow-remove-types.tgz
-  website_deploy:
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/facebook/flow-website:latest
-      options: --user root
-    needs:
-    - build_linux
-    - build_js
-    steps:
-    - uses: actions/checkout@v3.6.0
-    - name: Node cache
-      uses: actions/cache@v3.3.2
-      with:
-        key: v2-node-${{ runner.arch }}-${{ github.ref_name }}-${{ hashfiles('/etc/os-release', 'website/yarn.lock') }}
-        path: website/node_modules
-    - name: Install yarn deps
-      run: cd website && yarn install
-    - name: Build website
-      run: PATH=~/flow/bin/linux:$PATH .circleci/build_website.sh
-    - name: Gem cache
-      uses: actions/cache@v3.3.2
-      with:
-        key: v2-gem-${{ runner.arch }}-${{ github.ref_name }}-${{ hashfiles('/etc/os-release', 'website/Gemfile.lock') }}
-        path: UPDATE_ME
-    - name: Publish website to GitHub Pages
-      run: |-
-        cd website
-        yarn add gh-pages
-        yarn gh-pages -d build -u "flow-bot <flow-bot@users.noreply.github.com>" --repo https://${FLOW_BOT_TOKEN}@github.com/facebook/flow.git --no-history
+  # website_deploy:
+  #   if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: ghcr.io/facebook/flow-website:latest
+  #     options: --user root
+  #   needs:
+  #   - build_linux
+  #   - build_js
+  #   steps:
+  #   - uses: actions/checkout@v3.6.0
+  #   - name: Node cache
+  #     uses: actions/cache@v3.3.2
+  #     with:
+  #       key: v2-node-${{ runner.arch }}-${{ github.ref_name }}-${{ hashfiles('/etc/os-release', 'website/yarn.lock') }}
+  #       path: website/node_modules
+  #   - name: Install yarn deps
+  #     run: cd website && yarn install
+  #   - name: Build website
+  #     run: PATH=~/flow/bin/linux:$PATH .circleci/build_website.sh
+  #   - name: Gem cache
+  #     uses: actions/cache@v3.3.2
+  #     with:
+  #       key: v2-gem-${{ runner.arch }}-${{ github.ref_name }}-${{ hashfiles('/etc/os-release', 'website/Gemfile.lock') }}
+  #       path: UPDATE_ME
+  #   - name: Publish website to GitHub Pages
+  #     run: |-
+  #       cd website
+  #       yarn add gh-pages
+  #       yarn gh-pages -d build -u "flow-bot <flow-bot@users.noreply.github.com>" --repo https://${FLOW_BOT_TOKEN}@github.com/facebook/flow.git --no-history
   # Deploy jobs
   npm_deploy:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: node:12
@@ -564,7 +564,7 @@ jobs:
     - name: Deploy to npm
       run: .circleci/deploy_npm.sh
   github_linux:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -580,7 +580,7 @@ jobs:
     - name: Upload Linux libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-linux64.zip "libflowparser-linux64-${{ github.ref }}.zip"
   github_macos:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -596,7 +596,7 @@ jobs:
     - name: Upload Mac libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-osx.zip "libflowparser-osx-${{ github.ref }}.zip"
   github_macos_arm64:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -612,7 +612,7 @@ jobs:
     - name: Upload Mac libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-osx-arm64.zip "libflowparser-osx-arm64-${{ github.ref }}.zip"
   github_win:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -626,7 +626,7 @@ jobs:
     - name: Upload Windows binary
       run: .circleci/github_upload.sh dist/flow-win64.zip "flow-win64-${{ github.ref }}.zip"
   flow_bin_deploy:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: node:12
@@ -642,7 +642,7 @@ jobs:
     - name: Deploy flow-bin
       run: .circleci/deploy_flow_bin.sh
   try_flow_deploy:
-    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v.' )
+    if: contains(github.event_name, 'push') && startsWith( github.ref, 'refs/tags/v' )
     runs-on: ubuntu-latest
     container:
       image: node:12
